# kDeduper

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  kDeduper.cpp
includes/: kseqReader.hpp
sample_data/: R1.fastq  R2.fastq
src/: kmer.cpp
